--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<version>2.13.15</version>
 		</dependency>
 		<dependency>
+			<groupId>org.scala-lang.modules</groupId>
+			<artifactId>scala-java8-compat_2.13</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
 			<version>${jjwt.version}</version>
