Adding repository and service interface of the inventory(generic)

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,2 +1,2 @@
-key.jwt=bW9pc2VzMDRfbHVpczA0XzIwMDNfcGVyZXowNF9haXpwdXJ1YTEw
-minute.exp=30
+jwt.secret_key=bW9pc2VzMDRfbHVpczA0XzIwMDNfcGVyZXowNF9haXpwdXJ1YTEw
+jwt.minute_exp=30
